// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should prioritize disabled over error styles 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  margin-bottom: 16px;
}

.circuit-1 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-3 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  background-color: #E6E6E6;
  box-shadow: 0 0 0 1px #999;
}

.circuit-3::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<label
  class="circuit-0"
  disabled=""
  for="input_11"
>
  <span
    class="circuit-1"
  >
    Label
  </span>
  <div
    class="circuit-2"
  >
    <input
      aria-invalid="true"
      class="circuit-3"
      disabled=""
      id="input_11"
      value=""
    />
  </div>
</label>
`;

exports[`Input should prioritize disabled over warning styles 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  margin-bottom: 16px;
}

.circuit-1 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-3 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  background-color: #E6E6E6;
  box-shadow: 0 0 0 1px #999;
}

.circuit-3::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<label
  class="circuit-0"
  disabled=""
  for="input_12"
>
  <span
    class="circuit-1"
  >
    Label
  </span>
  <div
    class="circuit-2"
  >
    <input
      class="circuit-3"
      disabled=""
      id="input_12"
      value=""
    />
  </div>
</label>
`;

exports[`Input should render with a Tooltip when passed the validationHint prop 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  margin-bottom: 16px;
}

.circuit-1 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-3 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #999;
}

.circuit-3::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-3:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-3:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-4 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  margin-top: 4px;
  color: #666;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<label
  class="circuit-0"
  for="input_4"
>
  <span
    class="circuit-1"
  >
    Label
  </span>
  <div
    class="circuit-2"
  >
    <input
      class="circuit-3"
      id="input_4"
      value=""
    />
  </div>
  <span
    class="circuit-4"
  >
    Validation hint
  </span>
</label>
`;

exports[`Input should render with a prefix when passed the prefix prop 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  margin-bottom: 16px;
}

.circuit-1 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-3 {
  position: absolute;
  pointer-events: none;
  color: #666;
  padding: 12px 16px;
  height: 48px;
  width: 48px;
}

.circuit-4 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  padding-left: 48px;
  box-shadow: 0 0 0 1px #999;
}

.circuit-4::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-4:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-4:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<label
  class="circuit-0"
  for="input_2"
>
  <span
    class="circuit-1"
  >
    Label
  </span>
  <div
    class="circuit-2"
  >
    <div
      class="circuit-3"
      style="width: 24px; height: 24px;"
    />
    <input
      class="circuit-4"
      id="input_2"
      value=""
    />
  </div>
</label>
`;

exports[`Input should render with a suffix when passed the suffix prop 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  margin-bottom: 16px;
}

.circuit-1 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-3 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  padding-right: 48px;
  box-shadow: 0 0 0 1px #999;
}

.circuit-3::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-3:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-3:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-4 {
  position: absolute;
  top: 0;
  right: 0;
  pointer-events: none;
  color: #666;
  padding: 12px 16px;
  height: 48px;
  width: 48px;
  -webkit-transition: right 120ms ease-in-out;
  transition: right 120ms ease-in-out;
}

<label
  class="circuit-0"
  for="input_3"
>
  <span
    class="circuit-1"
  >
    Label
  </span>
  <div
    class="circuit-2"
  >
    <input
      class="circuit-3"
      id="input_3"
      value=""
    />
    <div
      class="circuit-4"
      style="width: 24px; height: 24px;"
    />
  </div>
</label>
`;

exports[`Input should render with custom styles 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  margin-bottom: 16px;
  border: 1px solid red;
}

.circuit-1 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-3 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #999;
  color: red;
}

.circuit-3::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-3:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-3:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<label
  class="circuit-0"
  for="input_15"
>
  <span
    class="circuit-1"
  >
    Label
  </span>
  <div
    class="circuit-2"
  >
    <input
      class="circuit-3"
      id="input_15"
      value=""
    />
  </div>
</label>
`;

exports[`Input should render with default styles 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  margin-bottom: 16px;
}

.circuit-1 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-3 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #999;
}

.circuit-3::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-3:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-3:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<label
  class="circuit-0"
  for="input_1"
>
  <span
    class="circuit-1"
  >
    Label
  </span>
  <div
    class="circuit-2"
  >
    <input
      class="circuit-3"
      id="input_1"
      value=""
    />
  </div>
</label>
`;

exports[`Input should render with disabled styles when passed the disabled prop 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  margin-bottom: 16px;
}

.circuit-1 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-3 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  background-color: #E6E6E6;
  box-shadow: 0 0 0 1px #999;
}

.circuit-3::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<label
  class="circuit-0"
  disabled=""
  for="input_10"
>
  <span
    class="circuit-1"
  >
    Label
  </span>
  <div
    class="circuit-2"
  >
    <input
      class="circuit-3"
      disabled=""
      id="input_10"
      value=""
    />
  </div>
</label>
`;

exports[`Input should render with inline styles when passed the inline prop 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  display: inline-block;
  margin-right: 16px;
  margin-bottom: 16px;
}

.circuit-1 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-3 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #999;
}

.circuit-3::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-3:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-3:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<label
  class="circuit-0"
  for="input_13"
>
  <span
    class="circuit-1"
  >
    Label
  </span>
  <div
    class="circuit-2"
  >
    <input
      class="circuit-3"
      id="input_13"
      value=""
    />
  </div>
</label>
`;

exports[`Input should render with invalid styles when passed the invalid prop 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  margin-bottom: 16px;
}

.circuit-1 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-3 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #D23F47;
}

.circuit-3::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:not(:focus)::-webkit-input-placeholder {
  color: #D23F47;
  opacity: 0.5;
}

.circuit-3:not(:focus)::-moz-placeholder {
  color: #D23F47;
  opacity: 0.5;
}

.circuit-3:not(:focus):-ms-input-placeholder {
  color: #D23F47;
  opacity: 0.5;
}

.circuit-3:not(:focus)::placeholder {
  color: #D23F47;
  opacity: 0.5;
}

.circuit-3:hover {
  box-shadow: 0 0 0 1px #B22426;
}

.circuit-3:focus {
  box-shadow: 0 0 0 2px #D23F47;
}

.circuit-3:active {
  box-shadow: 0 0 0 1px #D23F47;
}

<label
  class="circuit-0"
  for="input_6"
>
  <span
    class="circuit-1"
  >
    Label
  </span>
  <div
    class="circuit-2"
  >
    <input
      aria-invalid="true"
      class="circuit-3"
      id="input_6"
      value=""
    />
  </div>
</label>
`;

exports[`Input should render with no margin styles when passed the noMargin prop 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
}

.circuit-1 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-3 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #999;
}

.circuit-3::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-3:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-3:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<label
  class="circuit-0"
  for="input_14"
>
  <span
    class="circuit-1"
  >
    Label
  </span>
  <div
    class="circuit-2"
  >
    <input
      class="circuit-3"
      id="input_14"
      value=""
    />
  </div>
</label>
`;

exports[`Input should render with readonly styles when passed the readOnly prop 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  margin-bottom: 16px;
}

.circuit-1 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-3 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  background-color: #F5F5F5;
  box-shadow: 0 0 0 1px #999;
}

.circuit-3::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-3:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-3:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<label
  class="circuit-0"
  for="input_9"
>
  <span
    class="circuit-1"
  >
    Label
  </span>
  <div
    class="circuit-2"
  >
    <input
      class="circuit-3"
      id="input_9"
      readonly=""
      value=""
    />
  </div>
</label>
`;

exports[`Input should render with right aligned text 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  margin-bottom: 16px;
}

.circuit-1 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-3 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  text-align: right;
  box-shadow: 0 0 0 1px #999;
}

.circuit-3::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-3:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-3:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<label
  class="circuit-0"
  for="input_8"
>
  <span
    class="circuit-1"
  >
    Label
  </span>
  <div
    class="circuit-2"
  >
    <input
      class="circuit-3"
      id="input_8"
      value=""
    />
  </div>
</label>
`;

exports[`Input should render with valid styles when passed the showValid prop 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  margin-bottom: 16px;
}

.circuit-1 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-3 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #999;
}

.circuit-3::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-3:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-3:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<label
  class="circuit-0"
  for="input_7"
>
  <span
    class="circuit-1"
  >
    Label
  </span>
  <div
    class="circuit-2"
  >
    <input
      class="circuit-3"
      id="input_7"
      value=""
    />
  </div>
</label>
`;

exports[`Input should render with warning styles when passed the hasWarning prop 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  margin-bottom: 16px;
}

.circuit-1 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-3 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #F5C625;
}

.circuit-3::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3:not(:focus)::-webkit-input-placeholder {
  color: #F5C625;
}

.circuit-3:not(:focus)::-moz-placeholder {
  color: #F5C625;
}

.circuit-3:not(:focus):-ms-input-placeholder {
  color: #F5C625;
}

.circuit-3:not(:focus)::placeholder {
  color: #F5C625;
}

.circuit-3:hover {
  box-shadow: 0 0 0 1px #AD7A14;
}

.circuit-3:focus {
  box-shadow: 0 0 0 2px #F5C625;
}

.circuit-3:active {
  box-shadow: 0 0 0 1px #F5C625;
}

<label
  class="circuit-0"
  for="input_5"
>
  <span
    class="circuit-1"
  >
    Label
  </span>
  <div
    class="circuit-2"
  >
    <input
      class="circuit-3"
      id="input_5"
      value=""
    />
  </div>
</label>
`;
